--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:body>
 	<h:form>
 		<fieldset>
+			<h:messages/>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Titulo"  for="titulo" />
@@ -18,12 +20,34 @@
 				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
 
 				<h:outputLabel value="Data Lançamento" for="dataLancamento" />
-				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento}" />
+				<h:inputText id="dataLancamento" value="#{livroBean.livro.dataLancamento}" >
+					<f:convertDateTime pattern="dd/MM/yyyy"/>
+				</h:inputText>
 
-				<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
 			</h:panelGrid>
 
 		</fieldset>
+		
+		<fieldset>
+			<legend>Dados do Autor</legend>
+			<h:outputLabel value="Selecione o autor" for = "autor"/>
+			<h:selectOneMenu value="#{livroBean.autorId}">
+				<f:selectItems 
+				value="#{livroBean.autores}"
+				var="autor"
+				itemLabel="#{autor.nome}"
+				itemValue="#{autor.id}"/>
+			</h:selectOneMenu>
+			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
+			
+			<h:dataTable value ="#{livroBean.autoresDoLivro}" var ="autor">
+				<h:column>
+					<h:outputText value ="#{autor.nome}"/>
+				</h:column>
+			</h:dataTable>
+			
+		</fieldset>
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
 
 	</h:form>
 
