--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -11,10 +11,12 @@
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Titulo"  for="titulo" />
-				<h:inputText id="titulo"  value="#{livroBean.livro.titulo}"/>
+				<h:inputText id="titulo"  value="#{livroBean.livro.titulo}" required="true" requiredMessage="Título obrigatório" validatorMessage="Título - tamanho mínimo - máximo 40">
+					<f:validateLength maximum="40" minimum="3"/>
+				</h:inputText>
 
 				<h:outputLabel value="ISBN" for="isbn" />
-				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" />
+				<h:inputText id="isbn" value="#{livroBean.livro.isbn}" validator="#{livroBean.comecaComDigitoUm}"/>
 
 				<h:outputLabel value="Preço" for="preco" />
 				<h:inputText id="preco" value="#{livroBean.livro.preco}" />
