--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -3,16 +3,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
+	<h:head/>
 
 <h:body>
 	<h:form>
 		<fieldset>
-			<h:messages/>
+			<h:messages id="messages"/>
 			<legend>Dados do Livro</legend>
 			<h:panelGrid columns="2">
 				<h:outputLabel value="Titulo"  for="titulo" />
 				<h:inputText id="titulo"  value="#{livroBean.livro.titulo}" required="true" requiredMessage="Título obrigatório" validatorMessage="Título - tamanho mínimo - máximo 40">
 					<f:validateLength maximum="40" minimum="3"/>
+					<f:ajax event="blur" render="messages"/>
 				</h:inputText>
 
 				<h:outputLabel value="ISBN" for="isbn" />
@@ -35,27 +37,34 @@
 		<fieldset>
 			<legend>Dados do Autor</legend>
 			<h:outputLabel value="Selecione o autor" for = "autor"/>
-			<h:selectOneMenu value="#{livroBean.autorId}">
+			<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
 				<f:selectItems 
 				value="#{livroBean.autores}"
 				var="autor"
 				itemLabel="#{autor.nome}"
 				itemValue="#{autor.id}"/>
 			</h:selectOneMenu>
-			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}"/>
+			<h:commandButton value="Gravar Autor" action="#{livroBean.gravarAutor}">
+				<f:ajax  execute="autor" render="tabelaAutores"/>
+			</h:commandButton>
 			
-			<h:dataTable value ="#{livroBean.autoresDoLivro}" var ="autor">
+			<br/>
+			<h:commandLink value="Cadastrar novo autor" action="#{livroBean.formAutor}" immediate="true"/>
+			
+			<h:dataTable value ="#{livroBean.autoresDoLivro}" var ="autor" id="tabelaAutores">
 				<h:column>
 					<h:outputText value ="#{autor.nome}"/>
 				</h:column>
 			</h:dataTable>
 			
 		</fieldset>
-		<h:commandButton value="Gravar" action="#{livroBean.gravar}"/>
+		<h:commandButton value="Gravar" action="#{livroBean.gravar}">
+			<f:ajax execute="@form" render="@form :tabelaLivros"/>
+		</h:commandButton>
 
 	</h:form>
 	
-	<h:dataTable cellpadding="2" cellspacing="2" bgcolor="orange" border="2"  value = "#{livroBean.livrosCadastrados}" var = "livroCadastrado">
+	<h:dataTable cellpadding="2" cellspacing="2" bgcolor="orange" border="2"  value = "#{livroBean.livrosCadastrados}" var = "livroCadastrado" id="tabelaLivros">
 		
 		<h:column>
 			<f:facet name="header">Título</f:facet>
