--- a/src/main/webapp/autor.xhtml
+++ b/src/main/webapp/autor.xhtml
@@ -1,24 +1,31 @@
 <?xml version="1.0" encoding="ISO-8859-1" ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html">
-	
-	<h:body>
-	
+	xmlns:h="http://java.sun.com/jsf/html"
+	xmlns:ui="http://java.sun.com/jsf/facelets">
+
+<ui:composition template="_template.xhtml">
+	<ui:define name="titulo">
+			AUTOR
+		</ui:define>
+	<ui:define name="conteudo">
+
+
 		<h:form>
 			<fieldset>
-			
+
 				<legend>Dados do Autor</legend>
-				
-					<h:panelGrid columns="2">
-						<h:outputLabel value="Autor" for="autor"/>
-						<h:inputText id="autor" value="#{autorBean.autor.nome}"/>
+
+				<h:panelGrid columns="2">
+					<h:outputLabel value="Autor" for="autor" />
+					<h:inputText id="autor" value="#{autorBean.autor.nome}" />
 					<h:commandButton action="#{autorBean.gravar}" value="Gravar" />
-					</h:panelGrid>
-				
+				</h:panelGrid>
+
 			</fieldset>
 		</h:form>
-	</h:body>
-	
+	</ui:define>
+</ui:composition>
+
 
 </html>
