--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -107,7 +107,7 @@
 
 				<h:column>
 					<f:facet name="header">Ação</f:facet>
-					<h:commandLink value="Excluir" />
+					<h:commandLink value="Excluir" action="#{livroBean.excluir(livroCadastrado)}" />
 				</h:column>
 			</h:dataTable>
 		</h:form>
