--- a/src/main/webapp/login.xhtml
+++ b/src/main/webapp/login.xhtml
@@ -12,6 +12,7 @@
 
 
 	<ui:define name="conteudo">
+		<h:messages globalOnly="true"/>
 		<h:form id="login">
 			<fieldset>
 				<h:messages id="messages" />
