--- a/src/main/webapp/autor.xhtml
+++ b/src/main/webapp/autor.xhtml
@@ -2,7 +2,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui"
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
@@ -11,18 +13,33 @@
 	<ui:define name="conteudo">
 
 
-		<h:form>
-			<fieldset>
-
-				<legend>Dados do Autor</legend>
-
+		<h:form id="autor">
+			<p:fieldset legend="Dados do Autor">
 				<h:panelGrid columns="2">
-					<h:outputLabel value="Autor" for="autor" />
-					<h:inputText id="autor" value="#{autorBean.autor.nome}" />
-					<h:commandButton action="#{autorBean.gravar}" value="Gravar" />
+					<p:outputLabel value="Autor" for="autor" />
+					<p:inputText id="autor" value="#{autorBean.autor.nome}" />
+					<p:commandButton action="#{autorBean.gravar}" value="Gravar" process="@form" update="@form :formTabelaAutores"/>
 				</h:panelGrid>
 
-			</fieldset>
+			</p:fieldset>
+		</h:form>
+		
+		<h:form id="formTabelaAutores">
+			<p:dataList value="#{autorBean.autores}" var="autor" type="definition">
+				<f:facet name="header">
+					Autores
+				</f:facet>
+				<p:commandLink styleClass="ui-icon ui-icon-pencil" style="float:left; margin-right:10px"
+					update=":autor">
+					<f:setPropertyActionListener value="#{autor}" target="#{autorBean.autor}"/>
+				</p:commandLink>
+				
+				<p:commandLink styleClass="ui-icon ui-icon-trash" style="float:left;margin-right:10px"
+					action="#{autorBean.remover(autor)}" update="@form"/>
+				#{autor.nome}
+			</p:dataList>
+			
+		
 		</h:form>
 	</ui:define>
 	<ui:define name="textoRodape">Autor</ui:define>
