--- a/src/main/webapp/livro.xhtml
+++ b/src/main/webapp/livro.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:p="http://primefaces.org/ui">
 
 <ui:composition template="_template.xhtml">
 	<ui:define name="titulo">
@@ -13,71 +14,70 @@
 
 	<ui:define name="conteudo">
 		<h:form>
-			<fieldset>
-				<h:messages id="messages" />
-				<legend>Dados do Livro</legend>
-				<h:panelGrid columns="2">
-					<h:outputLabel value="Titulo" for="titulo" />
-					<h:inputText id="titulo" value="#{livroBean.livro.titulo}"
+			<p:fieldset legend="Dados do Livro">
+				<p:messages id="messages" />
+				<p:panelGrid columns="2">
+					<p:outputLabel value="Titulo" for="titulo" />
+					<p:inputText id="titulo" value="#{livroBean.livro.titulo}"
 						required="true" requiredMessage="Título obrigatório"
 						validatorMessage="Título - tamanho mínimo - máximo 40">
 						<f:validateLength maximum="40" minimum="3" />
 						<f:ajax event="blur" render="messages" />
-					</h:inputText>
+					</p:inputText>
 
-					<h:outputLabel value="ISBN" for="isbn" />
-					<h:inputText id="isbn" value="#{livroBean.livro.isbn}"
-						validator="#{livroBean.comecaComDigitoUm}" />
+					<p:outputLabel value="ISBN" for="isbn" />
+					<p:inputMask id="isbn" value="#{livroBean.livro.isbn}"
+						validator="#{livroBean.comecaComDigitoUm}" mask="999-9-99-99999-9"/>
 
-					<h:outputLabel value="Preço" for="preco" />
-					<h:inputText id="preco" value="#{livroBean.livro.preco}"
+					<p:outputLabel value="Preço" for="preco" />
+					<p:inputText id="preco" value="#{livroBean.livro.preco}"
 						validatorMessage="Preço - mínimo 10.00 - máximo 1000.00">
 						<f:validateDoubleRange minimum="10.00" maximum="1000.00" />
-					</h:inputText>
+					</p:inputText>
 
-					<h:outputLabel value="Data Lançamento" for="dataLancamento" />
-					<h:inputText id="dataLancamento"
-						value="#{livroBean.livro.dataLancamento}">
-						<f:convertDateTime pattern="dd/MM/yyyy" />
-					</h:inputText>
+					<p:outputLabel value="Data Lançamento" for="dataLancamento" />
+					<p:calendar id="dataLancamento" value="#{livroBean.livro.dataLancamento}" pattern="dd/MM/yyyy" mask="true" timeZone="America/Sao_Paulo"/>
+		
 
-				</h:panelGrid>
+				</p:panelGrid>
 
-			</fieldset>
+			</p:fieldset>
 
-			<fieldset>
-				<legend>Dados do Autor</legend>
-				<h:outputLabel value="Selecione o autor" for="autor" />
-				<h:selectOneMenu value="#{livroBean.autorId}" id="autor">
+			<p:fieldset legend="Dados do Autor">
+			<p:panelGrid columns="4">
+					<p:outputLabel value="Selecione o autor" for="autor" />
+				<p:selectOneMenu value="#{livroBean.autorId}" id="autor">
 					<f:selectItems value="#{livroBean.autores}" var="autor"
 						itemLabel="#{autor.nome}" itemValue="#{autor.id}" />
-				</h:selectOneMenu>
-				<h:commandButton value="Gravar Autor"
-					action="#{livroBean.gravarAutor}">
-					<f:ajax execute="autor" render="tabelaAutores" />
-				</h:commandButton>
+				</p:selectOneMenu>
+				<p:commandButton value="Gravar Autor"
+					action="#{livroBean.gravarAutor}"
+					 process="@this autor" update="tabelaAutores">
+				</p:commandButton>
 
-				<br />
-				<h:commandLink value="Cadastrar novo autor"
-					action="#{livroBean.formAutor}" immediate="true" />
+				<p:commandLink value="Cadastrar novo autor"
+					action="#{livroBean.formAutor}" immediate="true" update="@all"/>
+			</p:panelGrid>
+		
 
-				<h:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
-					id="tabelaAutores">
-					<h:column>
+				<p:dataTable value="#{livroBean.autoresDoLivro}" var="autor"
+					id="tabelaAutores"
+					emptyMessage="NADAAA">
+					<p:column>
 						<h:outputText value="#{autor.nome}" />
-					</h:column>
+					</p:column>
 
-					<h:column>
-						<h:commandLink value="X"
-							action="#{livroBean.excluirAutorDoLivro(autor)}" />
-					</h:column>
-				</h:dataTable>
+					<p:column>
+						<p:commandLink value="X"
+							action="#{livroBean.excluirAutorDoLivro(autor)}" process="@this" update="tabelaAutores" />
+					</p:column>
+				</p:dataTable>
 
-			</fieldset>
-			<h:commandButton value="Gravar" action="#{livroBean.gravar}">
-				<f:ajax execute="@form"
-					render="@form :formTabelaLivros:tabelaLivros" />
-			</h:commandButton>
+			</p:fieldset>
+			<p:commandButton value="Gravar" action="#{livroBean.gravar}"
+			process="@form"
+					update="@form :formTabelaLivros:tabelaLivros">
+			</p:commandButton>
 
 		</h:form>
 
